Update class name from portfolio_source_image to portfolio_publication.

--- a/portfolio.html
+++ b/portfolio.html
@@ -25,7 +25,7 @@
             <table class="portfolio_table">
                 <tr>
                     <td class="portfolio_date">1st June 2024</td>
-                    <td class="portfolio_source_image">
+                    <td class="portfolio_publication">
                         <p>Be Yourself</p>
                     </td>
                     <td>
@@ -36,7 +36,7 @@
                 </tr>
                 <tr class="important_portfolio_entry">
                     <td class="portfolio_date">30th March 2023</td>
-                    <td class="portfolio_source_image">
+                    <td class="portfolio_publication">
                         <p>The Guardian</p>
                     </td>
                     <td>
@@ -47,7 +47,7 @@
                 </tr>
                 <tr class="important_portfolio_entry">
                     <td class="portfolio_date">30th March 2023</td>
-                    <td class="portfolio_source_image">
+                    <td class="portfolio_publication">
                         <p>Independent</p>
                     </td>
                     <td>
@@ -58,7 +58,7 @@
                 </tr>
                 <tr class="important_portfolio_entry">
                     <td class="portfolio_date">29th March 2023</td>
-                    <td class="portfolio_source_image">
+                    <td class="portfolio_publication">
                         <p>Metro</p>
                     </td>
                     <td>
@@ -69,7 +69,7 @@
                 </tr>
                 <tr>
                     <td class="portfolio_date">17th February 2023</td>
-                    <td class="portfolio_source_image">
+                    <td class="portfolio_publication">
                         <p>Surrogacy UK</p>
                     </td>
                     <td>
@@ -78,7 +78,7 @@
                 </tr>
                 <tr>
                     <td class="portfolio_date">29th April 2022</td>
-                    <td class="portfolio_source_image">
+                    <td class="portfolio_publication">
                         <p>Girl on the Net</p>
                     </td>
                     <td>
@@ -87,7 +87,7 @@
                 </tr>
                 <tr>
                     <td class="portfolio_date">1st October 2021</td>
-                    <td class="portfolio_source_image">
+                    <td class="portfolio_publication">
                         <p>Polyamory Today</p>
                     </td>
                     <td>
@@ -98,7 +98,7 @@
                 </tr>
                 <tr>
                     <td class="portfolio_date">8th March 2021</td>
-                    <td class="portfolio_source_image">
+                    <td class="portfolio_publication">
                         <p>Polyamory Today</p>
                     </td>
                     <td>
@@ -109,7 +109,7 @@
                 </tr>
                 <tr>
                     <td class="portfolio_date">31st October 2020</td>
-                    <td class="portfolio_source_image">
+                    <td class="portfolio_publication">
                         <p>Medium</p>
                     </td>
                     <td>
@@ -120,7 +120,7 @@
                 </tr>
                 <tr>
                     <td class="portfolio_date">Oct 2020 - present</td>
-                    <td class="portfolio_source_image">
+                    <td class="portfolio_publication">
                         <p>Kim's Surrogacy Journey</p>
                     </td>
                     <td>
@@ -129,7 +129,7 @@
                 </tr>
                 <tr>
                     <td class="portfolio_date">4th October 2020</td>
-                    <td class="portfolio_source_image">
+                    <td class="portfolio_publication">
                         <p>Goodness Magazine</p>
                     </td>
                     <td>
@@ -140,7 +140,7 @@
                 </tr>
                 <tr class="important_portfolio_entry">
                     <td class="portfolio_date">13th September 2020</td>
-                    <td class="portfolio_source_image">
+                    <td class="portfolio_publication">
                         <p>It's Freezing in LA!</p>
                     </td>
                     <td>
@@ -151,7 +151,7 @@
                 </tr>
                 <tr>
                     <td class="portfolio_date">Sept-Oct 2020</td>
-                    <td class="portfolio_source_image">
+                    <td class="portfolio_publication">
                         <p>The Gay & Lesbian Review</p>
                     </td>
                     <td>
@@ -162,7 +162,7 @@
                 </tr>
                 <tr>
                     <td class="portfolio_date">17th July 2020</td>
-                    <td class="portfolio_source_image">
+                    <td class="portfolio_publication">
                         <p>History of Yesterday</p>
                     </td>
                     <td>
@@ -173,7 +173,7 @@
                 </tr>
                 <tr>
                     <td class="portfolio_date">17th July 2020</td>
-                    <td class="portfolio_source_image">
+                    <td class="portfolio_publication">
                         <p>Polyamory Today</p>
                     </td>
                     <td>
@@ -184,7 +184,7 @@
                 </tr>
                 <tr class="important_portfolio_entry">
                     <td class="portfolio_date">13th July 2020</td>
-                    <td class="portfolio_source_image">
+                    <td class="portfolio_publication">
                         <p>i newspaper</p>
                     </td>
                     <td>
@@ -195,7 +195,7 @@
                 </tr>
                 <tr>
                     <td class="portfolio_date">July 2020</td>
-                    <td class="portfolio_source_image">
+                    <td class="portfolio_publication">
                         <p>H&E Naturist</p>
                     </td>
                     <td>
@@ -204,7 +204,7 @@
                 </tr>
                 <tr class="important_portfolio_entry">
                     <td class="portfolio_date">26th June 2020</td>
-                    <td class="portfolio_source_image">
+                    <td class="portfolio_publication">
                         <p>Metro</p>
                     </td>
                     <td>
@@ -215,7 +215,7 @@
                 </tr>
                 <tr class="important_portfolio_entry">
                     <td class="portfolio_date">31st May 2020</td>
-                    <td class="portfolio_source_image">
+                    <td class="portfolio_publication">
                         <p>Metro</p>
                     </td>
                     <td>
@@ -226,7 +226,7 @@
                 </tr>
                 <tr class="important_portfolio_entry">
                     <td class="portfolio_date">21st May 2020</td>
-                    <td class="portfolio_source_image">
+                    <td class="portfolio_publication">
                         <p>Nursing Clio</p>
                     </td>
                     <td>
@@ -237,7 +237,7 @@
                 </tr>
                 <tr>
                     <td class="portfolio_date">1st May 2020</td>
-                    <td class="portfolio_source_image">
+                    <td class="portfolio_publication">
                         <p>The Ascent</p>
                     </td>
                     <td>
@@ -248,7 +248,7 @@
                 </tr>
                 <tr class="important_portfolio_entry">
                     <td class="portfolio_date">24th April 2020</td>
-                    <td class="portfolio_source_image">
+                    <td class="portfolio_publication">
                         <p>Huffington Post</p>
                     </td>
                     <td>
@@ -259,7 +259,7 @@
                 </tr>
                 <tr>
                     <td class="portfolio_date">8th April 2020</td>
-                    <td class="portfolio_source_image">
+                    <td class="portfolio_publication">
                         <p>BURO.</p>
                     </td>
                     <td>
@@ -270,7 +270,7 @@
                 </tr>
                 <tr>
                     <td class="portfolio_date">14th March 2020</td>
-                    <td class="portfolio_source_image">
+                    <td class="portfolio_publication">
                         <p>Fearless She Wrote</p>
                     </td>
                     <td>
@@ -281,7 +281,7 @@
                 </tr>
                 <tr class="important_portfolio_entry">
                     <td class="portfolio_date">13th February 2020</td>
-                    <td class="portfolio_source_image">
+                    <td class="portfolio_publication">
                         <p>Medium</p>
                     </td>
                     <td>
@@ -292,7 +292,7 @@
                 </tr>
                 <tr>
                     <td class="portfolio_date">3rd February 2020</td>
-                    <td class="portfolio_source_image">
+                    <td class="portfolio_publication">
                         <p>Medium</p>
                     </td>
                     <td>
@@ -303,7 +303,7 @@
                 </tr>
                 <tr class="important_portfolio_entry">
                     <td class="portfolio_date">24th January 2020</td>
-                    <td class="portfolio_source_image">
+                    <td class="portfolio_publication">
                         <p>Polyamory Today</p>
                     </td>
                     <td>
@@ -314,7 +314,7 @@
                 </tr>
                 <tr>
                     <td class="portfolio_date">22nd January 2020</td>
-                    <td class="portfolio_source_image">
+                    <td class="portfolio_publication">
                         <p>Dabbler</p>
                     </td>
                     <td>
@@ -325,7 +325,7 @@
                 </tr>
                 <tr>
                     <td class="portfolio_date">9th January 2020</td>
-                    <td class="portfolio_source_image">
+                    <td class="portfolio_publication">
                         <p>Polyamory Today</p>
                     </td>
                     <td>
@@ -336,7 +336,7 @@
                 </tr>
                 <tr class="important_portfolio_entry">
                     <td class="portfolio_date">18th December 2019</td>
-                    <td class="portfolio_source_image">
+                    <td class="portfolio_publication">
                         <p>CityMetric</p>
                     </td>
                     <td>
@@ -347,7 +347,7 @@
                 </tr>
                 <tr class="important_portfolio_entry">
                     <td class="portfolio_date">17th December 2019</td>
-                    <td class="portfolio_source_image">
+                    <td class="portfolio_publication">
                         <p>Left Foot Forward</p>
                     </td>
                     <td>
@@ -358,7 +358,7 @@
                 </tr>
                 <tr>
                     <td class="portfolio_date">16th December 2019</td>
-                    <td class="portfolio_source_image">
+                    <td class="portfolio_publication">
                         <p>Anxiety UK</p>
                     </td>
                     <td>
@@ -369,7 +369,7 @@
                 </tr>
                 <tr>
                     <td class="portfolio_date">4th December 2019</td>
-                    <td class="portfolio_source_image">
+                    <td class="portfolio_publication">
                         <p>The Writing Cooperative</p>
                     </td>
                     <td>
@@ -380,7 +380,7 @@
                 </tr>
                 <tr>
                     <td class="portfolio_date">December 2019</td>
-                    <td class="portfolio_source_image">
+                    <td class="portfolio_publication">
                         <p>H&E Naturist</p>
                     </td>
                     <td>
@@ -389,7 +389,7 @@
                 </tr>
                 <tr>
                     <td class="portfolio_date">29th November 2019</td>
-                    <td class="portfolio_source_image">
+                    <td class="portfolio_publication">
                         <p>Medium</p>
                     </td>
                     <td>
@@ -400,7 +400,7 @@
                 </tr>
                 <tr>
                     <td class="portfolio_date">29th November 2019</td>
-                    <td class="portfolio_source_image">
+                    <td class="portfolio_publication">
                         <p>Girl on the Net</p>
                     </td>
                     <td>
@@ -409,7 +409,7 @@
                 </tr>
                 <tr>
                     <td class="portfolio_date">28th November 2019</td>
-                    <td class="portfolio_source_image">
+                    <td class="portfolio_publication">
                         <p>Polyamory Today</p>
                     </td>
                     <td>
@@ -420,7 +420,7 @@
                 </tr>
                 <tr>
                     <td class="portfolio_date">4th November 2019</td>
-                    <td class="portfolio_source_image">
+                    <td class="portfolio_publication">
                         <p>Medium</p>
                     </td>
                     <td>
@@ -431,7 +431,7 @@
                 </tr>
                 <tr class="important_portfolio_entry">
                     <td class="portfolio_date">17th October 2019</td>
-                    <td class="portfolio_source_image">
+                    <td class="portfolio_publication">
                         <p>Medium</p>
                     </td>
                     <td>
@@ -442,7 +442,7 @@
                 </tr>
                 <tr class="important_portfolio_entry">
                     <td class="portfolio_date">13th October 2019</td>
-                    <td class="portfolio_source_image">
+                    <td class="portfolio_publication">
                         <p>History is Now Magazine</p>
                     </td>
                     <td>
@@ -453,7 +453,7 @@
                 </tr>
                 <tr>
                     <td class="portfolio_date">4th October 2019</td>
-                    <td class="portfolio_source_image">
+                    <td class="portfolio_publication">
                         <p>Medium</p>
                     </td>
                     <td>
@@ -464,7 +464,7 @@
                 </tr>
                 <tr>
                     <td class="portfolio_date">26th September 2019</td>
-                    <td class="portfolio_source_image">
+                    <td class="portfolio_publication">
                         <p>Medium</p>
                     </td>
                     <td>
@@ -475,7 +475,7 @@
                 </tr>
                 <tr class="important_portfolio_entry">
                     <td class="portfolio_date">19th September 2019</td>
-                    <td class="portfolio_source_image">
+                    <td class="portfolio_publication">
                         <p>Oxford Mail</p>
                     </td>
                     <td>
@@ -486,7 +486,7 @@
                 </tr>
                 <tr class="important_portfolio_entry">
                     <td class="portfolio_date">5th September 2019</td>
-                    <td class="portfolio_source_image">
+                    <td class="portfolio_publication">
                         <p>Medium</p>
                     </td>
                     <td>
@@ -497,7 +497,7 @@
                 </tr>
                 <tr>
                     <td class="portfolio_date">1st August 2019</td>
-                    <td class="portfolio_source_image">
+                    <td class="portfolio_publication">
                         <p>Medium</p>
                     </td>
                     <td>
@@ -508,7 +508,7 @@
                 </tr>
                 <tr>
                     <td class="portfolio_date">9th July 2019</td>
-                    <td class="portfolio_source_image">
+                    <td class="portfolio_publication">
                         <p>Medium</p>
                     </td>
                     <td>
@@ -519,7 +519,7 @@
                 </tr>
                 <tr>
                     <td class="portfolio_date">5th July 2019</td>
-                    <td class="portfolio_source_image">
+                    <td class="portfolio_publication">
                         <p>Medium</p>
                     </td>
                     <td>
@@ -530,7 +530,7 @@
                 </tr>
                 <tr>
                     <td class="portfolio_date">21st June 2019</td>
-                    <td class="portfolio_source_image">
+                    <td class="portfolio_publication">
                         <p>Medium</p>
                     </td>
                     <td>
@@ -541,7 +541,7 @@
                 </tr>
                 <tr>
                     <td class="portfolio_date">13th June 2019</td>
-                    <td class="portfolio_source_image">
+                    <td class="portfolio_publication">
                         <p>Medium</p>
                     </td>
                     <td>
