--- a/fiction-portfolio.html
+++ b/fiction-portfolio.html
@@ -25,7 +25,7 @@
             <table class="portfolio_table">
                 <tr>
                     <td class="portfolio_date">23rd May 2022</td>
-                    <td class="portfolio_source_image">
+                    <td class="portfolio_publication">
                         <p>Nymphs</p>
                     </td>
                     <td>
@@ -34,7 +34,7 @@
                 </tr>
                 <tr>
                     <td class="portfolio_date">11th March 2022</td>
-                    <td class="portfolio_source_image">
+                    <td class="portfolio_publication">
                         <p>Prism & Pen</p>
                     </td>
                     <td>
@@ -43,7 +43,7 @@
                 </tr>
                 <tr>
                     <td class="portfolio_date">14th May 2021</td>
-                    <td class="portfolio_source_image">
+                    <td class="portfolio_publication">
                         <p>P.S. I Love You</p>
                     </td>
                     <td>
@@ -52,7 +52,7 @@
                 </tr>
                 <tr class="important_portfolio_entry">
                     <td class="portfolio_date">May 2021</td>
-                    <td class="portfolio_source_image">
+                    <td class="portfolio_publication">
                         <p>Queerlings</p>
                     </td>
                     <td>
@@ -61,7 +61,7 @@
                 </tr>
                 <tr class="important_portfolio_entry">
                     <td class="portfolio_date">May 2021</td>
-                    <td class="portfolio_source_image">
+                    <td class="portfolio_publication">
                         <p>Foglifter</p>
                     </td>
                     <td>
@@ -70,7 +70,7 @@
                 </tr>
                 <tr>
                     <td class="portfolio_date">25th March 2021</td>
-                    <td class="portfolio_source_image">
+                    <td class="portfolio_publication">
                         <p>ILLUMINATION</p>
                     </td>
                     <td>
@@ -79,7 +79,7 @@
                 </tr>
                 <tr>
                     <td class="portfolio_date">February 2021</td>
-                    <td class="portfolio_source_image">
+                    <td class="portfolio_publication">
                         <p>Confluence Magazine</p>
                     </td>
                     <td>
@@ -88,7 +88,7 @@
                 </tr>
                 <tr>
                     <td class="portfolio_date">9th December 2020</td>
-                    <td class="portfolio_source_image">
+                    <td class="portfolio_publication">
                         <p>Written Tales</p>
                     </td>
                     <td>
@@ -97,7 +97,7 @@
                 </tr>
                 <tr class="important_portfolio_entry">
                     <td class="portfolio_date">6th November 2020</td>
-                    <td class="portfolio_source_image">
+                    <td class="portfolio_publication">
                         <p>Tigershark Magazine</p>
                     </td>
                     <td>
@@ -106,7 +106,7 @@
                 </tr>
                 <tr>
                     <td class="portfolio_date">1st November 2020</td>
-                    <td class="portfolio_source_image">
+                    <td class="portfolio_publication">
                         <p>P.S. I Love You</p>
                     </td>
                     <td>
@@ -115,7 +115,7 @@
                 </tr>
                 <tr>
                     <td class="portfolio_date">28th October 2020</td>
-                    <td class="portfolio_source_image">
+                    <td class="portfolio_publication">
                         <p>Wordsmith Library</p>
                     </td>
                     <td>
@@ -124,7 +124,7 @@
                 </tr>
                 <tr>
                     <td class="portfolio_date">18th October 2020</td>
-                    <td class="portfolio_source_image">
+                    <td class="portfolio_publication">
                         <p>Written Tales Magazine</p>
                     </td>
                     <td>
@@ -133,7 +133,7 @@
                 </tr>
                 <tr>
                     <td class="portfolio_date">15th October 2020</td>
-                    <td class="portfolio_source_image">
+                    <td class="portfolio_publication">
                         <p>Creative Cafe</p>
                     </td>
                     <td>
@@ -142,7 +142,7 @@
                 </tr>
                 <tr>
                     <td class="portfolio_date">8th October 2020</td>
-                    <td class="portfolio_source_image">
+                    <td class="portfolio_publication">
                         <p>Wordsmith Library</p>
                     </td>
                     <td>
@@ -151,7 +151,7 @@
                 </tr>
                 <tr>
                     <td class="portfolio_date">3rd September 2020</td>
-                    <td class="portfolio_source_image">
+                    <td class="portfolio_publication">
                         <p>The Creative Cafe</p>
                     </td>
                     <td>
@@ -160,7 +160,7 @@
                 </tr>
                 <tr>
                     <td class="portfolio_date">27th August 2020</td>
-                    <td class="portfolio_source_image">
+                    <td class="portfolio_publication">
                         <p>The Junction</p>
                     </td>
                     <td>
@@ -169,7 +169,7 @@
                 </tr>
                 <tr>
                     <td class="portfolio_date">13th August 2020</td>
-                    <td class="portfolio_source_image">
+                    <td class="portfolio_publication">
                         <p>Short Kid Stories</p>
                     </td>
                     <td>
@@ -178,7 +178,7 @@
                 </tr>
                 <tr>
                     <td class="portfolio_date">30th July 2020</td>
-                    <td class="portfolio_source_image">
+                    <td class="portfolio_publication">
                         <p>Written Tales</p>
                     </td>
                     <td>
@@ -187,7 +187,7 @@
                 </tr>
                 <tr class="important_portfolio_entry">
                     <td class="portfolio_date">23rd July 2020</td>
-                    <td class="portfolio_source_image">
+                    <td class="portfolio_publication">
                         <p>The Junction</p>
                     </td>
                     <td>
@@ -196,7 +196,7 @@
                 </tr>
                 <tr>
                     <td class="portfolio_date">12th July 2020</td>
-                    <td class="portfolio_source_image">
+                    <td class="portfolio_publication">
                         <p>P.S. I Love You</p>
                     </td>
                     <td>
@@ -205,7 +205,7 @@
                 </tr>
                 <tr>
                     <td class="portfolio_date">7th July 2020</td>
-                    <td class="portfolio_source_image">
+                    <td class="portfolio_publication">
                         <p>The Junction</p>
                     </td>
                     <td>
@@ -214,7 +214,7 @@
                 </tr>
                 <tr class="important_portfolio_entry">
                     <td class="portfolio_date">7th July 2020</td>
-                    <td class="portfolio_source_image">
+                    <td class="portfolio_publication">
                         <p>Prism & Pen</p>
                     </td>
                     <td>
@@ -223,7 +223,7 @@
                 </tr>
                 <tr class="important_portfolio_entry">
                     <td class="portfolio_date">22nd May 2020</td>
-                    <td class="portfolio_source_image">
+                    <td class="portfolio_publication">
                         <p>P.S. I Love You</p>
                     </td>
                     <td>
@@ -232,7 +232,7 @@
                 </tr>
                 <tr>
                     <td class="portfolio_date">24th April 2020</td>
-                    <td class="portfolio_source_image">
+                    <td class="portfolio_publication">
                         <p>P.S. I Love You</p>
                     </td>
                     <td>
@@ -241,7 +241,7 @@
                 </tr>
                 <tr>
                     <td class="portfolio_date">16th April 2020</td>
-                    <td class="portfolio_source_image">
+                    <td class="portfolio_publication">
                         <p>Pandemic Diaries</p>
                     </td>
                     <td>
@@ -250,7 +250,7 @@
                 </tr>
                 <tr>
                     <td class="portfolio_date">4th April 2020</td>
-                    <td class="portfolio_source_image">
+                    <td class="portfolio_publication">
                         <p>Short Kid Stories</p>
                     </td>
                     <td>
@@ -259,7 +259,7 @@
                 </tr>
                 <tr>
                     <td class="portfolio_date">9th February 2020</td>
-                    <td class="portfolio_source_image">
+                    <td class="portfolio_publication">
                         <p>P.S. I Love You</p>
                     </td>
                     <td>
