Use proper em-dashes.

--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
         <div class="contents">
             <p>
                 I accept paid writing commissions on a range of topics and would love to hear from you.
-                To discuss your writing needs - or for any other queries - please email me:
+                To discuss your writing needs &mdash; or for any other queries &mdash; please email me:
             </p>
             <div class="email">
                 <a class="email" href="mailto:kimbarrett92@gmail.com" target="_blank">
