Update "About Me" page.

--- a/index.html
+++ b/index.html
@@ -23,20 +23,27 @@
         <div class="contents">
             <img class="headshot" src="./images/headshot.jpg" alt="Photo of Kim" />
             <p>
-                I am a freelance writer with bylines in 
-                the Huffington Post, the i paper and the Metro.
+                I am a freelance writer with bylines in The Guardian,
+                The Independent, the i, the Metro and the Huffington Post.
                 I write non-fiction & fiction about a variety of topics, 
-                including mental health, sexuality and the environment.
-            </p>
-            <p>
-                I live in Oxford, UK and my pronouns are they/them.
+                including:
+                <ul>
+                    <li>surrogacy</li>
+                    <li>mental health</li>
+                    <li>sexuality and gender</li>
+                    <li>the environment</li>
+                </ul>
             </p>
             <h3>Background</h3>
             <p>
-                I grew up near Skipton in West Yorkshire then went to Warwick University 
-                to study Discrete Mathematics.
-                I've worked as a Java software developer for over 7 years
-                and started freelance writing in 2019.
+                I grew up in West Yorkshire and then went to Warwick University 
+                to study Discrete Mathematics. After university, I moved to Oxford,
+                where I have lived for the last decade.
+                Since 2013, I've worked as a Java software developer and 
+                I started freelance writing in 2019.
+                On the personal side, I am an avid aerial hoop amateur and
+                I recently carried a child as an altruistic surrogate.
+                My pronouns are they/them.
             </p>
         </div>
     </div>
