--- a/fiction-portfolio.html
+++ b/fiction-portfolio.html
@@ -24,6 +24,15 @@
             <h3>See below for examples of my previous work, or go to my <a href="./portfolio.html">non-fiction portfolio</a>.</h3>
             <table class="portfolio_table">
                 <tr>
+                    <td class="portfolio_date">13th June 2024</td>
+                    <td class="portfolio_publication">
+                        <p>ILLUMINATION</p>
+                    </td>
+                    <td>
+                        <a href="https://medium.com/illumination/9ea25fb9692c">Outside on Holiday</a> [Poetry]
+                    </td>
+                </tr>
+                <tr>
                     <td class="portfolio_date">23rd May 2022</td>
                     <td class="portfolio_publication">
                         <p>Nymphs</p>
