Swap to simple quote marks.

--- a/portfolio.html
+++ b/portfolio.html
@@ -30,7 +30,7 @@
                     </td>
                     <td>
                         <a href="https://medium.com/life-tips/7121185202ba">
-                            Is Polyamory a “Fix” for Cheating?
+                            Is Polyamory a "Fix" for Cheating?
                         </a>
                     </td>
                 </tr>
@@ -341,7 +341,7 @@
                     </td>
                     <td>
                         <a href="https://medium.com/polyamory-today/settling-for-more-than-the-one-5369eab4354a">
-                            Settling for More than “The One”
+                            Settling for More than "The One"
                         </a>
                     </td>
                 </tr>
@@ -352,7 +352,7 @@
                     </td>
                     <td>
                         <a href="https://citymonitor.ai/economy/business/postal-system-isn-t-working-renters-so-why-not-learn-email-4880">
-                            The postal system isn’t working for renters
+                            The postal system isn't working for renters
                         </a>
                     </td>
                 </tr>
@@ -513,7 +513,7 @@
                     </td>
                     <td>
                         <a href="https://medium.com/p/how-to-write-code-thats-easy-to-read-12c5b97e7b4e">
-                            How to write code that’s easy to read
+                            How to write code that's easy to read
                         </a>
                     </td>
                 </tr>
