--- a/fiction-portfolio.html
+++ b/fiction-portfolio.html
@@ -24,6 +24,15 @@
             <h3>See below for examples of my previous work, or go to my <a href="./portfolio.html">non-fiction portfolio</a>.</h3>
             <table class="portfolio_table">
                 <tr>
+                    <td class="portfolio_date">18th February 2025</td>
+                    <td class="portfolio_publication">
+                        <p>Dabbler</p>
+                    </td>
+                    <td>
+                        <a href="https://medium.com/dabbler/halleys-comet-bbdf1535c181">Halley's Comet</a> [Creative Non-Fiction]
+                    </td>
+                </tr>
+                <tr>
                     <td class="portfolio_date">14th November 2024</td>
                     <td class="portfolio_publication">
                         <p>Know Thyself, Heal Thyself</p>
