Update some broken links.

--- a/fiction-portfolio.html
+++ b/fiction-portfolio.html
@@ -56,7 +56,7 @@
                         <p>Nymphs</p>
                     </td>
                     <td>
-                        <a href="https://nymphspublications.com/new-blog/treading-water-by-kim-barrett">Treading Water</a> [Creative Non-Fiction]
+                        <a href="https://web.archive.org/web/20220524095910/https://nymphspublications.com/new-blog/treading-water-by-kim-barrett">Treading Water</a> [Creative Non-Fiction]
                     </td>
                 </tr>
                 <tr>
@@ -74,7 +74,7 @@
                         <p>P.S. I Love You</p>
                     </td>
                     <td>
-                        <a href="https://psiloveyou.xyz/then-the-storm-came-12c403ca5729?sk=e7dad2944616ea56569e7b297dd65313">Then the Storm Came</a> [Fiction]
+                        <a href="https://medium.com/p-s-i-love-you/then-the-storm-came-12c403ca5729">Then the Storm Came</a> [Fiction]
                     </td>
                 </tr>
                 <tr class="important_portfolio_entry">
@@ -137,7 +137,7 @@
                         <p>P.S. I Love You</p>
                     </td>
                     <td>
-                        <a href="https://psiloveyou.xyz/the-persistent-cough-2adcf700dd55?sk=6dc317314e84b3d8b07cd7f58823b648">The Persistent Cough</a> [Poetry]
+                        <a href="https://medium.com/p-s-i-love-you/the-persistent-cough-2adcf700dd55?sk=6dc317314e84b3d8b07cd7f58823b648">The Persistent Cough</a> [Poetry]
                     </td>
                 </tr>
                 <tr>
@@ -164,7 +164,7 @@
                         <p>Creative Cafe</p>
                     </td>
                     <td>
-                        <a href="https://thecreative.cafe/the-fractal-nature-of-life-63945312c96b?source=friends_link&sk=c957fa47c6a802ab079e36df08bb2f32">The Fractal Nature of Life</a> [Fiction]
+                        <a href="https://cafe.belikewise.com/the-fractal-nature-of-life-63945312c96b?sk=c957fa47c6a802ab079e36df08bb2f32">The Fractal Nature of Life</a> [Fiction]
                     </td>
                 </tr>
                 <tr>
@@ -182,7 +182,7 @@
                         <p>The Creative Cafe</p>
                     </td>
                     <td>
-                        <a href="https://thecreative.cafe/the-stranger-within-efb6fdcca1e7?source=friends_link&sk=17e8329005819ed4b28fc35dd846a09b">The Stranger Within</a> [Fiction]
+                        <a href="https://cafe.belikewise.com/the-stranger-within-efb6fdcca1e7?sk=17e8329005819ed4b28fc35dd846a09b">The Stranger Within</a> [Fiction]
                     </td>
                 </tr>
                 <tr>
@@ -227,7 +227,7 @@
                         <p>P.S. I Love You</p>
                     </td>
                     <td>
-                        <a href="https://psiloveyou.xyz/the-night-we-met-9e2b2cc6cd78?source=friends_link&sk=618122fdd870258fedb8e8b735f29ab0">The Night We Met</a> [Poetry]
+                        <a href="https://medium.com/p-s-i-love-you/the-night-we-met-9e2b2cc6cd78?sk=618122fdd870258fedb8e8b735f29ab0">The Night We Met</a> [Poetry]
                     </td>
                 </tr>
                 <tr>
@@ -254,7 +254,7 @@
                         <p>P.S. I Love You</p>
                     </td>
                     <td>
-                        <a href="https://psiloveyou.xyz/george-the-rabbit-goes-on-a-date-79d011fa4bde?source=friends_link&sk=8c2bf6d3e28038fdce67ec386fdc8543">George the Rabbit Goes on a Date</a> [Fiction]
+                        <a href="https://medium.com/p-s-i-love-you/george-the-rabbit-goes-on-a-date-79d011fa4bde?sk=8c2bf6d3e28038fdce67ec386fdc8543">George the Rabbit Goes on a Date</a> [Fiction]
                     </td>
                 </tr>
                 <tr>
@@ -263,7 +263,7 @@
                         <p>P.S. I Love You</p>
                     </td>
                     <td>
-                        <a href="https://psiloveyou.xyz/the-basics-of-pregnancy-in-pandas-c64f5a6c4730?source=friends_link&sk=0145c8fbad56ec85045d24402e43cd3a">The Basics of Pregnancy in Pandas</a> [Fiction]
+                        <a href="https://medium.com/p-s-i-love-you/the-basics-of-pregnancy-in-pandas-c64f5a6c4730?sk=0145c8fbad56ec85045d24402e43cd3a">The Basics of Pregnancy in Pandas</a> [Fiction]
                     </td>
                 </tr>
                 <tr>
@@ -290,7 +290,7 @@
                         <p>P.S. I Love You</p>
                     </td>
                     <td>
-                        <a href="https://psiloveyou.xyz/for-my-love-5c7f3507a46d?source=friends_link&sk=505b7d199d2c881d3a506391df14d7ce">For My Love</a> [Poetry]
+                        <a href="https://medium.com/p-s-i-love-you/for-my-love-5c7f3507a46d?sk=505b7d199d2c881d3a506391df14d7ce">For My Love</a> [Poetry]
                     </td>
                 </tr>
             </table>
