Update footer with new social links.

--- a/fiction-portfolio.html
+++ b/fiction-portfolio.html
@@ -298,15 +298,15 @@
     </div>
     <div class="footer">
         <ul class="profile_list">
-            <li><a href="https://twitter.com/kimbarrett92" target="_blank">Twitter</a></li>
-            <li>·</li>
             <li><a href="https://medium.com/@kimbarrett92" target="_blank">Medium</a></li>
             <li>·</li>
-            <li><a href="https://github.com/kbarrett" target="_blank">GitHub</a></li>
-            <li>·</li>
             <li><a href="https://muckrack.com/kim-barrett" target="_blank">Muck Rack</a></li>
+            <li>·</li>
+            <li><a href="https://instagram.com/kimbarrett92" target="_blank">Instagram</a></li>
+            <li>·</li>
+            <li><a href="https://bsky.app/profile/kimbarrett92.bsky.social" target="_blank">Bluesky</a></li>
         </ul>
-        <p>© 2020 Kim Barrett. All Rights Reserved.</p>
+        <p>© Kim Barrett. All Rights Reserved.</p>
     </div>
 </body>
 
