--- a/portfolio.html
+++ b/portfolio.html
@@ -24,6 +24,17 @@
             <h3>See below for examples of my previous work, or go to my <a href="./fiction-portfolio.html">fiction/poetry portfolio</a>.</h3>
             <table class="portfolio_table">
                 <tr>
+                    <td class="portfolio_date">25th April 2025</td>
+                    <td class="portfolio_publication">
+                        <p>Code Like A Girl</p>
+                    </td>
+                    <td>
+                        <a href="https://code.likeagirl.io/the-luddites-were-right-c4481cca8985">
+                            The Luddites Were Right
+                        </a>
+                    </td>
+                </tr>
+                <tr>
                     <td class="portfolio_date">6th June 2024</td>
                     <td class="portfolio_publication">
                         <p>Polyamory Today</p>
