--- a/fiction-portfolio.html
+++ b/fiction-portfolio.html
@@ -5,6 +5,8 @@
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css?family=Lexend+Deca&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="./images/icon.jpg">
+    <title>Kim Barrett - Fiction</title>
 </head>
 
 <body>
